--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
+    "knex-cleaner": "^1.3.0",
+    "objection": "^2.2.3",
+    "pg": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
