--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.0",
     "objection": "^2.2.3",
-    "pg": "^8.3.2"
+    "pg": "^8.3.2",
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
