--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "knex-cleaner": "^1.3.0",
     "objection": "^2.2.3",
     "pg": "^8.3.2",
-    "tsc": "^1.20150623.0"
+    "tsc": "^1.20150623.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
