--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-
     "outDir": "./dist",
-    "rootDir": "./src",
-
-    "esModuleInterop": true,
-
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "rootDir": "./src"
   }
 }
