--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex-cleaner": "^1.3.0",
     "objection": "^2.2.3",
     "pg": "^8.3.2",
+    "stripe": "^8.89.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.9.7"
   },
